@@ -67,6 +67,8 @@ Revision 4.2.3
   impementations. The former just process a single interaction and complete
   while the latter run as many interactions as user callback function
   indicates to.
+- Auth & target configuration container classes moved to their separate
+  modules at oneliner API.
 - Built-in debugger now supports negating debugging categories.
 - Fix to CommandGenerator's SNMPv3 engine autodiscovery algorithm
   when retryCount is administratively set to 0.
